# my-ocr-deepseek-ocr

./: pyproject.toml
docs/: readme.md
prompts/: 1-run-deepseek-locally.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md
src/: garbage_collector_utils.py  image_utils.py  main.py  main_high_mem_with_crop.py  main_ibm_docling.py  main_low_mem_without_crop.py  main_original.py  requirements.txt
src/images/: 10.avif  14.avif  4.avif  5.avif  7.avif  8.avif  9.avif
src/output/: 1.html
src/output/1/.ipynb_checkpoints/: result-checkpoint.md
src/output/2/.ipynb_checkpoints/: result-checkpoint.md
src/output/3/.ipynb_checkpoints/: result-checkpoint.md
src/output/4/: result.md
src/output/5/: result.md
src/output/6/.ipynb_checkpoints/: result-checkpoint.md
src/output/7/: result.md
src/output/8/: result.md
src/output/granite-docling/: 9.doctags  9.html  9.md
src/vertex_notebooks/: Dockerfile
vertex_notebooks/: Dockerfile
