[tool.poetry]
name = "my-ocr-deepseek-ocr"
version = "0.1.0"
description = ""
authors = ["RynGhd <ryan.ghadiri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
torch = "^2.5.1"
transformers = "==4.45.2"
accelerate = "^1.2.1"
pillow = "^11.0.0"
torchvision = "^0.24.0"
matplotlib = "^3.10.0"
addict = "^2.4.0"
einops = "^0.8.0"
numpy = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
